recursion.cons.min.Min.scala.error
Erreur de compilation :
Min:7: error: reassignment to val
   l = l.tail
     ^Min:8: error: type mismatch;
 found   : Int
 required: List[Int]
  return min(l.head)
               ^