recursion.cons.min.Min.scala.code
def min(l:List[Int]): Int = {
  
	if (l == Nil)
  return l.head
  if(l.head > l.tail.head)
   l = l.tail
  return min(l.head)


  
  
}